# CS482

./: README.md
1-tictactoe/: CMakeCache.txt  Makefile  cmake_install.cmake  out.board  submission.json  test.board  tictactoe
1-tictactoe/include/: tictac_support.h
1-tictactoe/src/: tictac_turnin.cc
2-spam/: CMakeLists.txt  spam.sublime-workspace  submission.json
2-spam/include/: SmsDatabase.h
2-spam/src/: SmsDatabase.cpp  classify.cpp  main.cpp  training.cpp
3-kf/: kf.py  sim.py  submission.json
4-rl/: README.md  car.py  cart.py
